--- a/index.html
+++ b/index.html
@@ -32,15 +32,15 @@
             <p class="hero-subtitle">基于AI分析的权威品牌排名｜客观数据｜实时更新</p>
             <div class="hero-stats">
                 <div class="stat-item">
-                    <div class="stat-number">4</div>
+                    <div class="stat-number">10</div>
                     <div class="stat-label">核心行业数</div>
                 </div>
                 <div class="stat-item">
-                    <div class="stat-number">4</div>
+                    <div class="stat-number">10</div>
                     <div class="stat-label">细分领域数</div>
                 </div>
                 <div class="stat-item">
-                    <div class="stat-number">40</div>
+                    <div class="stat-number">100</div>
                     <div class="stat-label">覆盖品牌数</div>
                 </div>
             </div>
@@ -115,6 +115,7 @@
                         <li><a href="#industries">行业榜单</a></li>
                         <li><a href="#hot-rankings">热门榜单</a></li>
                         <li><a href="#rules">榜单规则</a></li>
+                        <li><a href="disclaimer.html">榜单说明</a></li>
                     </ul>
                 </div>
                 <div class="footer-section">
@@ -123,7 +124,7 @@
                 </div>
             </div>
             <div class="footer-bottom">
-                <p>&copy; 2025 paihp.com. All rights reserved.</p>
+                <p>&copy; 2025 paihp.com. All rights reserved. | <a href="disclaimer.html" style="color: #999; font-size: 12px;">榜单说明</a></p>
             </div>
         </div>
     </footer>
