--- a/industry.html
+++ b/industry.html
@@ -149,6 +149,7 @@
                         <li><a href="index.html#industries">行业榜单</a></li>
                         <li><a href="index.html#hot-rankings">热门榜单</a></li>
                         <li><a href="index.html#rules">榜单规则</a></li>
+                        <li><a href="disclaimer.html">榜单说明</a></li>
                     </ul>
                 </div>
                 <div class="footer-section">
@@ -157,7 +158,7 @@
                 </div>
             </div>
             <div class="footer-bottom">
-                <p>&copy; 2025 paihp.com. All rights reserved.</p>
+                <p>&copy; 2025 paihp.com. All rights reserved. | <a href="disclaimer.html" style="color: #999; font-size: 12px;">榜单说明</a></p>
             </div>
         </div>
     </footer>
